# competetive

./: .gitignore  README.md
dm-2023/convertingromans/: kattis.yml
dm-2023/convertingromans/src/: main.rs
dm-2023/diehard/: kattis.yml
dm-2023/diehard/src/: main.rs
dm-2023/jamboree/: kattis.yml
dm-2023/jamboree/src/: main.rs
dm-2023/knightjump/src/: main.rs
dm-2023/vidsnuningur/: kattis.yml
dm-2023/vidsnuningur/src/: main.rs
kattis/challenges/alien-numerals/src/: main.rs
kattis/challenges/spam-detection/: Cargo.toml
kattis/challenges/spam-detection/src/: main.rs
kattis/dominoes2/: Cargo.toml
kattis/dominoes2/src/: main.rs
kattis/knightjump/: Cargo.toml  kattis.yml
kattis/knightjump/src/: main.rs
kattis/metronome/: kattis.yml
kattis/metronome/src/: main.rs
kattis/oddecho/: kattis.yml
kattis/oddecho/src/: main.rs
kattis/reachableroads/: Cargo.toml
kattis/reachableroads/src/: main.rs
kattis/refrigerator/: kattis.yml
kattis/refrigerator/src/: main.rs
kattis/spritt/: kattis.yml
kattis/spritt/src/: main.rs
kattis/theseus/: Cargo.toml
kattis/theseus/src/: main.rs
kattis/upprodun/: Cargo.toml  kattis.yml
kattis/upprodun/src/: main.rs
kattis/wheresmyinternet/: Cargo.toml
kattis/wheresmyinternet/src/: main.rs
