[package]
name = "knightjump"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[dev-dependencies]
seq-macro = "0.3" # for taking multiple input files as tests
test-case = "3.2" # specific different tests
#const_format = { version = "0.2", features = ["all"] } # for doing advanced string based includes

[dependencies]
# should probably not add more than those needed for testing